add target blank for links

--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@
 
 			<h2>SEE ALSO</h2>
 			<blockquote>
-				<p><a href="mailto:iztok.fister1@um.si">e-mail</a>, <a href="https://orcid.org/0000-0002-6418-1272">orcid</a>, <a href="https://github.com/firefly-cpp">github</a> </p>
-				<p><a href="https://www.strava.com/athletes/62828673">strava</a>, <a href="https://www.athlinks.com/athletes/40567147">athlinks</a>, <a href="https://orcid.org/0000-0002-6418-1272">orcid</a></p>
+				<p><a href="mailto:iztok.fister1@um.si">e-mail</a>, <a href="https://orcid.org/0000-0002-6418-1272" target="_blank">orcid</a>, <a href="https://github.com/firefly-cpp" target="_blank">github</a> </p>
+				<p><a href="https://www.strava.com/athletes/62828673" target="_blank">strava</a>, <a href="https://www.athlinks.com/athletes/40567147" target="_blank">athlinks</a></p>
 			</blockquote>
 		</div>
 	</body>
