Add recent publications

--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
 			<blockquote>
 				<p><a href="mailto:iztok.fister1@um.si">e-mail</a>, <a href="https://orcid.org/0000-0002-6418-1272" target="_blank">orcid</a>, <a href="https://github.com/firefly-cpp" target="_blank">github</a> </p>
 				<p><a href="https://www.strava.com/athletes/62828673" target="_blank">strava</a>, <a href="https://www.athlinks.com/athletes/40567147" target="_blank">athlinks</a></p>
+				<p><a href="publications.html" target="_blank">publications</a>
 			</blockquote>
 		</div>
 	</body>
