--- a/publications.html
+++ b/publications.html
@@ -1,5 +1,6 @@
 <html>
-<head><title>Iztok Fister, Jr.</title></head>
+<head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<title>Iztok Fister, Jr.</title></head>
 <body>
 
 <h1>Recent papers</h1>
