--- a/publications.html
+++ b/publications.html
@@ -5,6 +5,10 @@
 
 <h1>Recent papers</h1>
 
+<p>Iztok Fister Jr., Iztok Fister. <a href="static/publications/297.pdf">On stochastic evolving algorithms</a>. In: GECCO'22: proceedings of the Genetic and Evolutionary Computation Conference Companion, pp. 244-247, 2022;</p>
+
+<p>Damijan Novak, Iztok Fister Jr. <a href="static/publications/296.pdf">Adaptive online opponent game policy modeling with association rule mining</a>. In: IEEE International Symposium on Computational Intelligence and Informatics (CINTI), pp. 259-265, 2021;</p>
+
 <p>Iztok Fister Jr., Iztok Fister. <a href="static/publications/289.pdf">Information cartography in association rule mining</a>. IEEE transactions on emerging topics in computational intelligence, 2021.</p>
 
 <p>Luka Pečnik, Iztok Fister, Iztok Fister Jr. <a href="static/publications/290.pdf">NiaAML2: an improved AutoML using nature-inspired algorithms</a>. In: Advances in swarm intelligence: 12th international conference, ICSI 2021. pp 243-252, 2021.</p>
