--- a/publications.html
+++ b/publications.html
@@ -5,7 +5,11 @@
 
 <h1>Recent papers</h1>
 
-<p>Iztok Fister Jr., Iztok Fister. <a href="static/publications/297.pdf">On stochastic evolving algorithms</a>. In: GECCO'22: proceedings of the Genetic and Evolutionary Computation Conference Companion, pp. 244-247, 2022;</p>
+<p>Iztok Fister Jr., Iztok Fister. <a href="static/publications/297.pdf">On stochastic evolving algorithms</a>. In: GECCO'22: proceedings of the Genetic and Evolutionary Computation Conference Companion, pp. 244-247, 2022.</p>
+
+<p>Iztok Fister Jr., Iztok Fister, Sancho Salcedo-Sanz. <a href="static/publications/298.pdf">Time Series Numerical Association Rule Mining for assisting Smart Agriculture</a>. In: International Conference on Electrical, Computer and Energy Technologies (ICECET). IEEE, 2022.</p>
+
+<p>Damijan Novak, Domen Verber, Iztok Fister Jr. <a href="static/publications/299.pdf">Time analysis of Machine Learning Algorithm utilization in complex Game Environments</a>. In: SQAMIA 2022, 13 pages, 2022.</p>
 
 <p>Damijan Novak, Iztok Fister Jr. <a href="static/publications/296.pdf">Adaptive online opponent game policy modeling with association rule mining</a>. In: IEEE International Symposium on Computational Intelligence and Informatics (CINTI), pp. 259-265, 2021;</p>
 
