Update index page

--- a/index.html
+++ b/index.html
@@ -142,12 +142,13 @@
 			<h2>DESCRIPTION</h2>
 
 			<blockquote>
-				<p>Assistant Professor @ University of Maribor.</p>
-				<p>I am interested in computational intelligence in sport research.</p>
-				<p>Interested also in numerical association rule mining.</p>
+				<p>Assistant Professor @ the University of Maribor.</p>
+				<p>I am interested in computational intelligence in sports research.</p>
+				<p>I am also interested in numerical association rule mining.</p>
 				<p>Co-author of <a href="https://link.springer.com/book/10.1007/978-3-030-03490-0">Computational intelligence in sports</a> book.</p>
+				<p>I am an Associate Editor of Expert Systems with Applications journal.</p>
 				<p>Active packager in Fedora. Member of the <a href="https://neuro.fedoraproject.org">neuro-sig</a>.</p>
-				<p>Several IRONMAN/IRONMAN 70.3 finisher.</p>
+				<p>I am several IRONMAN/IRONMAN 70.3 finisher.</p>
 				<p>Finisher of double ultra triathlon.</p>
 			</blockquote>
 
