--- a/publications.html
+++ b/publications.html
@@ -7,6 +7,10 @@
 
 <p>Iztok Fister Jr., Iztok Fister. <a href="static/publications/297.pdf">On stochastic evolving algorithms</a>. In: GECCO'22: proceedings of the Genetic and Evolutionary Computation Conference Companion, pp. 244-247, 2022.</p>
 
+<p>Iztok Fister, Iztok Fister Jr., Damijan Novak, Domen Verber. <a href="static/publications/300.pdf">Data squashing as preprocessing in association rule mining</a>. In: Proceedings of the 2022 IEEE Symposium Series on Computational Intelligence (SSCI 2022), 6 pages, 2022;</p>
+
+<p>Luka Lukač, Iztok Fister Jr., Iztok Fister. <a href="static/publications/301.pdf">Digital Twin in Sport: From an Idea to Realization</a>. Appl. Sci. 2022, 12, 12741.</p>
+
 <p>Iztok Fister Jr., Iztok Fister, Sancho Salcedo-Sanz. <a href="static/publications/298.pdf">Time Series Numerical Association Rule Mining for assisting Smart Agriculture</a>. In: International Conference on Electrical, Computer and Energy Technologies (ICECET). IEEE, 2022.</p>
 
 <p>Damijan Novak, Domen Verber, Iztok Fister Jr. <a href="static/publications/299.pdf">Time analysis of Machine Learning Algorithm utilization in complex Game Environments</a>. In: SQAMIA 2022, 13 pages, 2022.</p>
