add recent papers

--- a/publications.html
+++ b/publications.html
@@ -5,6 +5,22 @@
 
 <h1>Recent papers</h1>
 
+<p>Alen Rajšp, Iztok Fister Jr. <a href="static/publications/302.pdf">Neo4j graph dataset of cycling paths in Slovenia</a>. Data in Brief 48, 2023.</p>
+
+<p>Iztok Fister, Andres Iglesias, Akemi Galvez, Iztok Fister Jr. <a href="static/publications/303.pdf">Online numerical association rule miner</a>. Neurocomputing 523 (2023): 33-43.</p>
+
+<p>Iztok Fister Jr, Iztok Fister, Dušan Fister, Vili Podgorelec, Sancho Salcedo-Sanz. <a href="static/publications/307.pdf">A comprehensive review of visualization methods for association rule mining: Taxonomy, Challenges, Open problems and Future ideas</a>. Expert Systems with Applications. Volume 233, 15 December 2023.</p>
+
+<p>Grega Vrbančič, Rok Kukovec, Iztok Fister, Vili Podgorelec, Sancho Salcedo-Sanz, Iztok Fister Jr. <a href="static/publications/304.pdf">Profiling the Arion rufus snails with computer vision</a>. 2022 IEEE 22nd International Symposium on Computational Intelligence and Informatics and 8th IEEE International Conference on Recent Achievements in Mechatronics, Automation, Computer Science and Robotics (CINTI-MACRo). IEEE, 2022.</p>
+
+<p>Žiga Stupan, Iztok Fister Jr. <a href="static/publications/305.pdf">NiaARM: A minimalistic framework for Numerical Association Rule Mining</a>. Journal of Open Source Software 7.77 (2022): 4448.</p>
+
+<p>Sašo Pavlič, Sašo Karakatič, Iztok Fister Jr. <a href="static/publications/306.pdf">NiaNet: A framework for constructing Autoencoder architectures using nature-inspired algorithms</a>. 2022 17th Conference on Computer Science and Intelligence Systems (FedCSIS). IEEE, 2022.</p>
+
+<p>Damijan Novak, Domen Verber, Jani Dugonik, Iztok Fister Jr. <a href="static/publications/308.pdf">Action-Based Digital Characterization of a Game Player.</a> Mathematics 11.5 (2023): 1243.</p>
+
+<p>Nina Tovornik, Iztok Fister Jr., Vili Podgorelec, Lucija Brezočnik. <a href="static/publications/309.pdf">A Nature-Inspired Implementation of the Computer Opponent in the Arcade Computer Game of Darts.</a> Elektrotehniski Vestnik 90.1/2 (2023): 45-50.</p>
+
 <p>Iztok Fister Jr., Iztok Fister. <a href="static/publications/297.pdf">On stochastic evolving algorithms</a>. In: GECCO'22: proceedings of the Genetic and Evolutionary Computation Conference Companion, pp. 244-247, 2022.</p>
 
 <p>Iztok Fister, Iztok Fister Jr., Damijan Novak, Domen Verber. <a href="static/publications/300.pdf">Data squashing as preprocessing in association rule mining</a>. In: Proceedings of the 2022 IEEE Symposium Series on Computational Intelligence (SSCI 2022), 6 pages, 2022;</p>
