--- a/publications.html
+++ b/publications.html
@@ -5,15 +5,23 @@
 
 <h1>Recent papers</h1>
 
+<p>Iztok Fister Jr., Dušan Fister, Iztok Fister, Vili Podgorelec, Sancho Salcedo-Sanz. <a href="static/publications/314.pdf">Time series numerical association rule mining variants in smart agriculture</a>. Journal of Ambient Intelligence and Humanized Computing (2023): 1-14.</p>
+
 <p>Alen Rajšp, Iztok Fister Jr. <a href="static/publications/302.pdf">Neo4j graph dataset of cycling paths in Slovenia</a>. Data in Brief 48, 2023.</p>
 
 <p>Iztok Fister, Andres Iglesias, Akemi Galvez, Iztok Fister Jr. <a href="static/publications/303.pdf">Online numerical association rule miner</a>. Neurocomputing 523 (2023): 33-43.</p>
 
 <p>Iztok Fister Jr, Iztok Fister, Dušan Fister, Vili Podgorelec, Sancho Salcedo-Sanz. <a href="static/publications/307.pdf">A comprehensive review of visualization methods for association rule mining: Taxonomy, Challenges, Open problems and Future ideas</a>. Expert Systems with Applications. Volume 233, 15 December 2023.</p>
 
+Iztok Fister Jr., Iztok Fister, Akemi Galvez, Andres Iglesias. <a href="static/publications/313.pdf">TinyNARM: Simplifying Numerical Association Rule Mining for Running on Microcontrollers</a>. In International Conference on Soft Computing Models in Industrial and Environmental Applications (pp. 122-131). Cham: Springer Nature Switzerland, 2023
+
+<p>Damijan Novak, Iztok Fister Jr. <a href="static/publications/312.pdf">Turn action extractions into game agent module decisions</a>. Proceedings of the 32nd International Electrotechnical and Computer Science Conference ERK 2023, pp. 309-312. 2023.</p>
+
 <p>Grega Vrbančič, Rok Kukovec, Iztok Fister, Vili Podgorelec, Sancho Salcedo-Sanz, Iztok Fister Jr. <a href="static/publications/304.pdf">Profiling the Arion rufus snails with computer vision</a>. 2022 IEEE 22nd International Symposium on Computational Intelligence and Informatics and 8th IEEE International Conference on Recent Achievements in Mechatronics, Automation, Computer Science and Robotics (CINTI-MACRo). IEEE, 2022.</p>
 
 <p>Žiga Stupan, Iztok Fister Jr. <a href="static/publications/305.pdf">NiaARM: A minimalistic framework for Numerical Association Rule Mining</a>. Journal of Open Source Software 7.77 (2022): 4448.</p>
+
+<p>Rahul Sharma, Minakshi Kaushik, Sijo Arakkal Peious, Alexandre Bazin, Syed Attique Shah, Iztok Fister Jr., Sadok Ben Yahia, Dirk Draheim. <a href="static/publications/311.pdf">A novel framework for unification of association rule mining, online analytical processing and statistical reasoning</a>. IEEE Access 10 (2022): 12792-12813.</p>
 
 <p>Sašo Pavlič, Sašo Karakatič, Iztok Fister Jr. <a href="static/publications/306.pdf">NiaNet: A framework for constructing Autoencoder architectures using nature-inspired algorithms</a>. 2022 17th Conference on Computer Science and Intelligence Systems (FedCSIS). IEEE, 2022.</p>
 
