--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 			<h2>DESCRIPTION</h2>
 
 			<blockquote>
-				<p>Assistant Professor @ the University of Maribor.</p>
+				<p>Associate Professor @ the University of Maribor.</p>
 				<p>I am interested in computational intelligence in sports research.</p>
 				<p>I am also interested in numerical association rule mining.</p>
 				<p>Co-author of <a href="https://link.springer.com/book/10.1007/978-3-030-03490-0">Computational intelligence in sports</a> book.</p>
