--- a/publications.html
+++ b/publications.html
@@ -13,7 +13,7 @@
 
 <p>Iztok Fister Jr, Iztok Fister, Dušan Fister, Vili Podgorelec, Sancho Salcedo-Sanz. <a href="static/publications/307.pdf">A comprehensive review of visualization methods for association rule mining: Taxonomy, Challenges, Open problems and Future ideas</a>. Expert Systems with Applications. Volume 233, 15 December 2023.</p>
 
-Iztok Fister Jr., Iztok Fister, Akemi Galvez, Andres Iglesias. <a href="static/publications/313.pdf">TinyNARM: Simplifying Numerical Association Rule Mining for Running on Microcontrollers</a>. In International Conference on Soft Computing Models in Industrial and Environmental Applications (pp. 122-131). Cham: Springer Nature Switzerland, 2023
+<p>Iztok Fister Jr., Iztok Fister, Akemi Galvez, Andres Iglesias. <a href="static/publications/313.pdf">TinyNARM: Simplifying Numerical Association Rule Mining for Running on Microcontrollers</a>. In International Conference on Soft Computing Models in Industrial and Environmental Applications (pp. 122-131). Cham: Springer Nature Switzerland, 2023</p>
 
 <p>Damijan Novak, Iztok Fister Jr. <a href="static/publications/312.pdf">Turn action extractions into game agent module decisions</a>. Proceedings of the 32nd International Electrotechnical and Computer Science Conference ERK 2023, pp. 309-312. 2023.</p>
 
