--- a/publications.html
+++ b/publications.html
@@ -5,6 +5,14 @@
 
 <h1>Recent papers</h1>
 
+<p>Andreas Holzinger, Iztok Fister Jr., Iztok Fister, Hans-Peter Kaul, Senthold Asseng. <a href="static/publications/317.pdf">Human-Centered AI in smart farming: Towards Agriculture 5.0</a>. IEEE Access, 2024.</p>
+
+<p>Iztok Fister, Andres Iglesias, Akemi Galvez, Vili Podgorelec, Iztok Fister Jr. <a href="static/publications/321.pdf">Contribution of low support association rules in understanding the mined knowledge</a>. In 2024 International Conference on Artificial Intelligence, Computer, Data Sciences and Applications (ACDSA) (pp. 1-6). IEEE, 2024.</p>
+
+<p>Iztok Fister Jr., Dušan Fister, Vili Podgorelec, Iztok Fister. <a href="static/publications/322.pdf">Profiling the carbon footprint of performance bugs</a>. In 2024 International Conference on Artificial Intelligence, Computer, Data Sciences and Applications (ACDSA) (pp. 1-7). IEEE, 2024.</p>
+
+<p>Leon Kopitar, Iztok Fister Jr., Gregor Štiglic. <a href="static/publications/318.pdf">Using Generative AI to Improve the Performance and Interpretability of Rule-Based Diagnosis of Type 2 Diabetes Mellitus</a>. Information, 15(3), 162, 2024.</p>
+
 <p>Iztok Fister Jr., Dušan Fister, Iztok Fister, Vili Podgorelec, Sancho Salcedo-Sanz. <a href="static/publications/314.pdf">Time series numerical association rule mining variants in smart agriculture</a>. Journal of Ambient Intelligence and Humanized Computing (2023): 1-14.</p>
 
 <p>Alen Rajšp, Iztok Fister Jr. <a href="static/publications/302.pdf">Neo4j graph dataset of cycling paths in Slovenia</a>. Data in Brief 48, 2023.</p>
@@ -14,6 +22,14 @@
 <p>Iztok Fister Jr, Iztok Fister, Dušan Fister, Vili Podgorelec, Sancho Salcedo-Sanz. <a href="static/publications/307.pdf">A comprehensive review of visualization methods for association rule mining: Taxonomy, Challenges, Open problems and Future ideas</a>. Expert Systems with Applications. Volume 233, 15 December 2023.</p>
 
 <p>Iztok Fister Jr., Iztok Fister, Akemi Galvez, Andres Iglesias. <a href="static/publications/313.pdf">TinyNARM: Simplifying Numerical Association Rule Mining for Running on Microcontrollers</a>. In International Conference on Soft Computing Models in Industrial and Environmental Applications (pp. 122-131). Cham: Springer Nature Switzerland, 2023</p>
+
+<p>Sašo Pavlič, Sašo Karakatič, Iztok Fister Jr. <a href="static/publications/319.pdf">NiaNetAD: Autoencoder architecture search for tabular anomaly detection powered by HPC</a>. In 2023 IEEE 23rd International Symposium on Computational Intelligence and Informatics (CINTI) (pp. 000083-000088). IEEE, 2023.</p>
+
+<p>Uroš Mlakar, Iztok Fister Jr., Iztok Fister. <a href="static/publications/320.pdf">Variable-length Differential Evolution for Numerical and Discrete Association Rule Mining</a>. IEEE Access, 2023.</p>
+
+<p>Akemi Galvez, Iztok Fister Jr., Lihua You, Iztok Fister, Andres Iglesias. <a href="static/publications/315.pdf">Artificial Immune Systems Approach for Surface Reconstruction of Shapes with Large Smooth Bumps</a>. In International Conference on Computational Science (pp. 297-310), 2023.</p>
+
+<p>Renata Kramberger, Iztok Fister, Iztok Fister Jr., Aida Kamišalić. <a href="static/publications/316.pdf">Toward Anomaly Detection in the Blockchain Using Numerical Association Rule Mining</a>. In 2023 IEEE 21st Jubilee International Symposium on Intelligent Systems and Informatics (SISY) (pp. 351-356). IEEE, 2023.</p>
 
 <p>Damijan Novak, Iztok Fister Jr. <a href="static/publications/312.pdf">Turn action extractions into game agent module decisions</a>. Proceedings of the 32nd International Electrotechnical and Computer Science Conference ERK 2023, pp. 309-312. 2023.</p>
 
