--- a/publications.html
+++ b/publications.html
@@ -17,6 +17,8 @@
 
 <p>Alen Rajšp, Iztok Fister Jr. <a href="static/publications/302.pdf">Neo4j graph dataset of cycling paths in Slovenia</a>. Data in Brief 48, 2023.</p>
 
+<p>Iztok Fister Jr., Iztok Fister. <a href="static/publications/310.pdf">Towards replicated algorithms</a>. arXiv preprint arXiv:2304.13524, 2023.</p>
+
 <p>Iztok Fister, Andres Iglesias, Akemi Galvez, Iztok Fister Jr. <a href="static/publications/303.pdf">Online numerical association rule miner</a>. Neurocomputing 523 (2023): 33-43.</p>
 
 <p>Iztok Fister Jr, Iztok Fister, Dušan Fister, Vili Podgorelec, Sancho Salcedo-Sanz. <a href="static/publications/307.pdf">A comprehensive review of visualization methods for association rule mining: Taxonomy, Challenges, Open problems and Future ideas</a>. Expert Systems with Applications. Volume 233, 15 December 2023.</p>
@@ -55,6 +57,8 @@
 
 <p>Damijan Novak, Domen Verber, Iztok Fister Jr. <a href="static/publications/299.pdf">Time analysis of Machine Learning Algorithm utilization in complex Game Environments</a>. In: SQAMIA 2022, 13 pages, 2022.</p>
 
+<p>Akemi Gálvez, Iztok Fister, Andres Iglesias, Iztok Fister Jr., Valentin Gómez-Jauregui, Cristina Manchado, Cesar Otero. <a href="static/publications/323.pdf">IFS-Based Image Reconstruction of Binary Images with Functional Networks</a>. Mathematics, 10, 1107, 2022.</p>
+
 <p>Damijan Novak, Iztok Fister Jr. <a href="static/publications/296.pdf">Adaptive online opponent game policy modeling with association rule mining</a>. In: IEEE International Symposium on Computational Intelligence and Informatics (CINTI), pp. 259-265, 2021;</p>
 
 <p>Iztok Fister Jr., Iztok Fister. <a href="static/publications/289.pdf">Information cartography in association rule mining</a>. IEEE transactions on emerging topics in computational intelligence, 2021.</p>
@@ -70,6 +74,16 @@
 <p>Iztok Fister Jr., Luka Lukač, Alen Rajšp, Iztok Fister, Luka Pečnik, Dušan Fister. <a href="static/publications/294.pdf">A minimalistic toolbox for extracting features from sport activity files</a>. In: IEEE International Conference on Intelligent Engineering Systems (INES). pp. 121-126.</p>
 
 <p>Damijan Novak, Iztok Fister Jr. <a href="static/publications/295.pdf">Game feature validation of a real-time game space with an extended classifier system</a>. In: IEEE 25th International Conference on Intelligent Engineering Systems (INES), pp. 95-101, 2021.</p>
+
+<p>Akemi Gálvez, Andres Iglesias, Jose A. Díaz, Iztok Fister, Joaquin López, Iztok Fister Jr. <a href="static/publications/325.pdf">Modified OFS-RDS bat algorithm for IFS encoding of bitmap fractal binary images</a>. Advanced Engineering Informatics, 47, 101222, 2021.</p>
+
+<p>Akemi Gálvez, Andres Iglesias, Iztok Fister, Iztok Fister Jr., Cesar Otero, Jose A. Díaz. <a href="static/publications/326.pdf">NURBS functional network approach for automatic image segmentation of macroscopic medical images in melanoma detection</a>. Journal of Computational Science, 56, 101481, 2021.</p>
+
+<p>Rok Kukovec, Iztok Fister Jr., Špela Pečnik, Sašo Karakatič. <a href="static/publications/327.pdf">Adversarial Image Perturbation with a Genetic Algorithm</a>. In Proceedings of the 2021 7th Student Computer Science Research Conference (pp. 25--29), 2021.</p>
+
+<p>Aida Kamišalić, Renata Kramberger, Iztok Fister Jr. <a href="static/publications/328.pdf">Synergy of blockchain technology and data mining techniques for anomaly detection</a>. Applied Sciences, 11(17), 7987, 2021.</p>
+
+<p>Iztok Fister Jr., Vili Podgorelec, Iztok Fister. <a href="static/publications/324.pdf">Improved nature-inspired algorithms for numeric association rule mining</a>. In Intelligent Computing and Optimization: Proceedings of the 3rd International Conference on Intelligent Computing and Optimization 2020 (ICO 2020). pp. 187-195.</p>
 
 </body>
 </html>
