--- a/publications.html
+++ b/publications.html
@@ -59,6 +59,12 @@
 
 <p>Akemi Gálvez, Iztok Fister, Andres Iglesias, Iztok Fister Jr., Valentin Gómez-Jauregui, Cristina Manchado, Cesar Otero. <a href="static/publications/323.pdf">IFS-Based Image Reconstruction of Binary Images with Functional Networks</a>. Mathematics, 10, 1107, 2022.</p>
 
+<p>Vili Podgorelec, Sašo Karakatič, Iztok Fister Jr., Lucija Brezočnik, Špela Pečnik, Grega Vrbančič. <a href="static/publications/331.pdf">Digital Transformation Using Artificial Intelligence and Machine Learning: An Electrical Energy Consumption Case</a>. In International Conference “New Technologies, Development and Applications” (pp. 498-504), 2022.</p>
+
+<p>Iztok Fister, Dušan Fister, Iztok Fister Jr. <a href="static/publications/332.pdf">Reinforcement learning-based differential evolution for global optimization</a>. In Differential Evolution: From Theory to Practice (pp. 43-75), 2022.</p>
+
+<p>Iztok Fister, Grega Vrbančič, Vili Podgorelec, Iztok Fister Jr. <a href="static/publications/333.pdf">Synthetic Data Augmentation of Cycling Sport Training Datasets</a>. In International Conference on Intelligent Computing & Optimization (pp. 65-74), 2022.</p>
+
 <p>Damijan Novak, Iztok Fister Jr. <a href="static/publications/296.pdf">Adaptive online opponent game policy modeling with association rule mining</a>. In: IEEE International Symposium on Computational Intelligence and Informatics (CINTI), pp. 259-265, 2021;</p>
 
 <p>Iztok Fister Jr., Iztok Fister. <a href="static/publications/289.pdf">Information cartography in association rule mining</a>. IEEE transactions on emerging topics in computational intelligence, 2021.</p>
@@ -79,9 +85,13 @@
 
 <p>Akemi Gálvez, Andres Iglesias, Iztok Fister, Iztok Fister Jr., Cesar Otero, Jose A. Díaz. <a href="static/publications/326.pdf">NURBS functional network approach for automatic image segmentation of macroscopic medical images in melanoma detection</a>. Journal of Computational Science, 56, 101481, 2021.</p>
 
-<p>Rok Kukovec, Iztok Fister Jr., Špela Pečnik, Sašo Karakatič. <a href="static/publications/327.pdf">Adversarial Image Perturbation with a Genetic Algorithm</a>. In Proceedings of the 2021 7th Student Computer Science Research Conference (pp. 25--29), 2021.</p>
+<p>Rok Kukovec, Iztok Fister Jr., Špela Pečnik, Sašo Karakatič. <a href="static/publications/327.pdf">Adversarial Image Perturbation with a Genetic Algorithm</a>. In Proceedings of the 2021 7th Student Computer Science Research Conference (pp. 25-29), 2021.</p>
 
 <p>Aida Kamišalić, Renata Kramberger, Iztok Fister Jr. <a href="static/publications/328.pdf">Synergy of blockchain technology and data mining techniques for anomaly detection</a>. Applied Sciences, 11(17), 7987, 2021.</p>
+
+<p>Vid Kraner, Iztok Fister Jr., Lucija Brezočnik. <a href="static/publications/330.pdf">Procedural content generation of custom tower defense game using genetic algorithms</a>. In International Conference “New Technologies, Development and Applications” (pp. 493-503), 2021.</p>
+
+<p>Iztok Fister Jr. <a href="static/publications/329.pdf">The Relevance of Nature-Inspired Metaheuristic Algorithms in Smart Sport Training</a>. In International Conference on Emerging Applications and Technologies for Industry 4.0 (EATI’2020) Emerging Applications and Technologies for Industry 4.0 (pp. 1-8), 2020.</p>
 
 <p>Iztok Fister Jr., Vili Podgorelec, Iztok Fister. <a href="static/publications/324.pdf">Improved nature-inspired algorithms for numeric association rule mining</a>. In Intelligent Computing and Optimization: Proceedings of the 3rd International Conference on Intelligent Computing and Optimization 2020 (ICO 2020). pp. 187-195.</p>
 
