--- a/publications.html
+++ b/publications.html
@@ -3,7 +3,11 @@
 <title>Iztok Fister, Jr.</title></head>
 <body>
 
-<h1>Recent papers</h1>
+<h1>Recent publications</h1>
+
+<p>Alen Rajšp, Iztok Fister Jr. <a href="static/publications/335.pdf">Property Graph Framework for Geographical Routes in Sports Training</a>. Information 16.1 (2025): 30.</p>
+
+<p>Iztok Fister Jr., Laurenz A. Farthofer, Luka Pečnik, Iztok Fister, Andreas Holzinger. <a href="static/publications/338.pdf">NiaAML: AutoML for classification and regression pipelines</a>. SoftwareX, 29, 101974, 2025.</p>
 
 <p>Andreas Holzinger, Iztok Fister Jr., Iztok Fister, Hans-Peter Kaul, Senthold Asseng. <a href="static/publications/317.pdf">Human-Centered AI in smart farming: Towards Agriculture 5.0</a>. IEEE Access, 2024.</p>
 
@@ -12,6 +16,12 @@
 <p>Iztok Fister Jr., Dušan Fister, Vili Podgorelec, Iztok Fister. <a href="static/publications/322.pdf">Profiling the carbon footprint of performance bugs</a>. In 2024 International Conference on Artificial Intelligence, Computer, Data Sciences and Applications (ACDSA) (pp. 1-7). IEEE, 2024.</p>
 
 <p>Leon Kopitar, Iztok Fister Jr., Gregor Štiglic. <a href="static/publications/318.pdf">Using Generative AI to Improve the Performance and Interpretability of Rule-Based Diagnosis of Type 2 Diabetes Mellitus</a>. Information, 15(3), 162, 2024.</p>
+
+<p>Minakshi Kaushik, Rahul Sharma, Pilleriin Kõiva, Iztok Fister Jr., Dirk Draheim. <a href="static/publications/336.pdf">An Exhaustive Multi-Aspect Analysis of Swarm Intelligence Algorithms in Numerical Association Rule Mining</a>. IEEE Access, 2024.</p>
+
+<p>Damijan Novak, Domen Verber, Iztok Fister, Iztok Fister Jr. <a href="static/publications/337.pdf">Analiza vplivov kodirnikov na doseženo okrepitveno nagrado hibridnega algoritma NARM-XCS</a>. In ERK 2024 (pp. 393-396), 2024.</p>
+
+<p>Akemi Galvez, Iztok Fister, Suash Deb, Iztok Fister Jr., Andres Iglesias. <a href="static/publications/334.pdf">Cuckoo Search Algorithm with Levy Flights for Reconstruction of Periodic and Chaotic Orbits of the 2D Henon Map</a>. In Proceedings of the 2024 8th International Conference on Intelligent Systems, Metaheuristics & Swarm Intelligence (pp. 9-13), 2024.</p>
 
 <p>Iztok Fister Jr., Dušan Fister, Iztok Fister, Vili Podgorelec, Sancho Salcedo-Sanz. <a href="static/publications/314.pdf">Time series numerical association rule mining variants in smart agriculture</a>. Journal of Ambient Intelligence and Humanized Computing (2023): 1-14.</p>
 
