--- a/publications.html
+++ b/publications.html
@@ -11,6 +11,8 @@
 
 <p>Andreas Holzinger, Iztok Fister Jr., Iztok Fister, Hans-Peter Kaul, Senthold Asseng. <a href="static/publications/317.pdf">Human-Centered AI in smart farming: Towards Agriculture 5.0</a>. IEEE Access, 2024.</p>
 
+<p>Damijan Novak, Domen Verber, Iztok Fister, Iztok Fister Jr. <a href="static/publications/339.pdf">Association Rule Mining as Knowledge Infusion into the Mechanics of an eXtended Classifier System</a>. In 28th International Conference on Intelligent Engineering Systems (INES) (pp. 203-208). IEEE, 2024.</p>
+
 <p>Iztok Fister, Andres Iglesias, Akemi Galvez, Vili Podgorelec, Iztok Fister Jr. <a href="static/publications/321.pdf">Contribution of low support association rules in understanding the mined knowledge</a>. In 2024 International Conference on Artificial Intelligence, Computer, Data Sciences and Applications (ACDSA) (pp. 1-6). IEEE, 2024.</p>
 
 <p>Iztok Fister Jr., Dušan Fister, Vili Podgorelec, Iztok Fister. <a href="static/publications/322.pdf">Profiling the carbon footprint of performance bugs</a>. In 2024 International Conference on Artificial Intelligence, Computer, Data Sciences and Applications (ACDSA) (pp. 1-7). IEEE, 2024.</p>
@@ -41,6 +43,8 @@
 
 <p>Akemi Galvez, Iztok Fister Jr., Lihua You, Iztok Fister, Andres Iglesias. <a href="static/publications/315.pdf">Artificial Immune Systems Approach for Surface Reconstruction of Shapes with Large Smooth Bumps</a>. In International Conference on Computational Science (pp. 297-310), 2023.</p>
 
+<p>Akemi Galvez, Iztok Fister, Suash Deb, Iztok Fister Jr., Andres Iglesias. <a href="static/publications/340.pdf">Cuckoo Search Algorithm with Lévy Flights for Surface Reconstruction from Point Clouds with Applications to Reverse Engineering</a>. In Proceedings of the 7th International Conference on Intelligent Systems, Metaheuristics & Swarm Intelligence (pp. 95-102), 2023.</p>
+
 <p>Renata Kramberger, Iztok Fister, Iztok Fister Jr., Aida Kamišalić. <a href="static/publications/316.pdf">Toward Anomaly Detection in the Blockchain Using Numerical Association Rule Mining</a>. In 2023 IEEE 21st Jubilee International Symposium on Intelligent Systems and Informatics (SISY) (pp. 351-356). IEEE, 2023.</p>
 
 <p>Damijan Novak, Iztok Fister Jr. <a href="static/publications/312.pdf">Turn action extractions into game agent module decisions</a>. Proceedings of the 32nd International Electrotechnical and Computer Science Conference ERK 2023, pp. 309-312. 2023.</p>
@@ -56,6 +60,8 @@
 <p>Damijan Novak, Domen Verber, Jani Dugonik, Iztok Fister Jr. <a href="static/publications/308.pdf">Action-Based Digital Characterization of a Game Player.</a> Mathematics 11.5 (2023): 1243.</p>
 
 <p>Nina Tovornik, Iztok Fister Jr., Vili Podgorelec, Lucija Brezočnik. <a href="static/publications/309.pdf">A Nature-Inspired Implementation of the Computer Opponent in the Arcade Computer Game of Darts.</a> Elektrotehniski Vestnik 90.1/2 (2023): 45-50.</p>
+
+<p>Tadej Lahovnik, Grega Vrbančič, Iztok Fister Jr., Vili Podgorelec. <a href="static/publications/343.pdf">Uporaba programskega jezika Julia za namene podatkovne znanosti</a>. In OTS 2023 Sodobne informacijske tehnologije in storitve: Zbornik 26. konference. Univerzitetna založba Univerze v Mariboru.</p>
 
 <p>Iztok Fister Jr., Iztok Fister. <a href="static/publications/297.pdf">On stochastic evolving algorithms</a>. In: GECCO'22: proceedings of the Genetic and Evolutionary Computation Conference Companion, pp. 244-247, 2022.</p>
 
@@ -74,6 +80,10 @@
 <p>Iztok Fister, Dušan Fister, Iztok Fister Jr. <a href="static/publications/332.pdf">Reinforcement learning-based differential evolution for global optimization</a>. In Differential Evolution: From Theory to Practice (pp. 43-75), 2022.</p>
 
 <p>Iztok Fister, Grega Vrbančič, Vili Podgorelec, Iztok Fister Jr. <a href="static/publications/333.pdf">Synthetic Data Augmentation of Cycling Sport Training Datasets</a>. In International Conference on Intelligent Computing & Optimization (pp. 65-74), 2022.</p>
+
+<p>Grega Vrbančič, Iztok Fister Jr., Vili Podgorelec. <a href="static/publications/341.pdf">Reševanje industrijskih problemov z uporabo računske inteligence: primer avtomatskega načrtovanja delovnega časa</a>. In OTS 2022 Sodobne informacijske tehnologije in storitve: Zbornik petindvajsete konference, Maribor, 7. in 8. september 2022. Univerzitetna založba Univerze v Mariboru.</p>
+
+<p>Vili Podgorelec, Sašo Karakatič, Grega Vrbančič, Špela Pečnik, Iztok Fister Jr., Lucija Brezočnik, Miro Rogina, Franci Klauzner. <a href="static/publications/342.pdf">Vpeljava umetne inteligence in strojnega učenja v poslovni proces napovedovanja porabe električne energije</a>. In OTS 2022 Sodobne informacijske tehnologije in storitve: Zbornik petindvajsete konference, Maribor, 7. in 8. september 2022. Univerzitetna založba Univerze v Mariboru.</p>
 
 <p>Damijan Novak, Iztok Fister Jr. <a href="static/publications/296.pdf">Adaptive online opponent game policy modeling with association rule mining</a>. In: IEEE International Symposium on Computational Intelligence and Informatics (CINTI), pp. 259-265, 2021;</p>
 
