--- a/publications.html
+++ b/publications.html
@@ -5,9 +5,15 @@
 
 <h1>Recent publications</h1>
 
+<p>Tilen Hliš, Iztok Fister, Iztok Fister Jr. <a href="static/publications/340.pdf">Path Overlap Detection and Property Graph Construction from TCX Data for Advanced Analysis</a>. In. 23rd World Symposium on Applied Machine Intelligence and Informatics (SAMI). IEEE, 2025.</p>
+
+<p>Vili Podgorelec, Iztok Fister Jr., Grega Vrbančič. <a href="static/publications/339.pdf">Towards Green AI by Reducing Training Effort of Recurrent Neural Networks Using Hyper-Parameter Optimization with Dynamic Stopping Criteria</a>. In. 22nd Jubilee International Symposium on Intelligent Systems and Informatics (SISY). IEEE, 2024.</p>
+
 <p>Alen Rajšp, Iztok Fister Jr. <a href="static/publications/335.pdf">Property Graph Framework for Geographical Routes in Sports Training</a>. Information 16.1 (2025): 30.</p>
 
 <p>Iztok Fister Jr., Laurenz A. Farthofer, Luka Pečnik, Iztok Fister, Andreas Holzinger. <a href="static/publications/338.pdf">NiaAML: AutoML for classification and regression pipelines</a>. SoftwareX, 29, 101974, 2025.</p>
+
+<p>Tilen Hliš, Iztok Fister, Iztok Fister Jr. <a href="static/publications/341.pdf">Digital twins in sport: Concepts, taxonomies, challenges and practical potentials</a>. Expert Systems with Applications 258 (2024): 125104.</p>
 
 <p>Andreas Holzinger, Iztok Fister Jr., Iztok Fister, Hans-Peter Kaul, Senthold Asseng. <a href="static/publications/317.pdf">Human-Centered AI in smart farming: Towards Agriculture 5.0</a>. IEEE Access, 2024.</p>
 
