--- a/publications.html
+++ b/publications.html
@@ -7,6 +7,14 @@
 
 <p>Tilen Hliš, Iztok Fister, Iztok Fister Jr. <a href="static/publications/345.pdf">Path Overlap Detection and Property Graph Construction from TCX Data for Advanced Analysis</a>. In. 23rd World Symposium on Applied Machine Intelligence and Informatics (SAMI). IEEE, 2025.</p>
 
+<p>Uroš Mlakar, Iztok Fister Jr., Iztok Fister. <a href="static/publications/347.pdf">NiaAutoARM: Automated Framework for Constructing and Evaluating Association Rule Mining Pipelines</a>. Mathematics, 13(12), 1957, 2025.</p>
+
+<p>Amadej Krepek, Iztok Fister, Iztok Fister Jr. <a href="static/publications/348.pdf">Micro-Location Temperature Prediction Leveraging Deep Learning Approaches</a>. Applied Sciences, 15(12), 6793, 2025.</p>
+
+<p>Aleksander Kalacun, Iztok Fister Jr. <a href="static/publications/349.pdf">MARNN: A New Method for Multi-agent Reinforcement Learning</a>. In ERK 2025, Portorož, 601-604, 2025</p>
+
+<p>Iztok Fister Jr., Sancho Salcedo-Sanz, Enrique Alexandre-Cortizo, Damijan Novak, Iztok Fister, Vili Podgorelec, Mario Gorenjak. <a href="static/publications/350.pdf">Toward Explainable Time-Series Numerical Association Rule Mining: A Case Study in Smart-Agriculture</a>. Mathematics, 13(13), 2122, 2025.</p>
+
 <p>Vili Podgorelec, Iztok Fister Jr., Grega Vrbančič. <a href="static/publications/344.pdf">Towards Green AI by Reducing Training Effort of Recurrent Neural Networks Using Hyper-Parameter Optimization with Dynamic Stopping Criteria</a>. In. 22nd Jubilee International Symposium on Intelligent Systems and Informatics (SISY). IEEE, 2024.</p>
 
 <p>Alen Rajšp, Iztok Fister Jr. <a href="static/publications/335.pdf">Property Graph Framework for Geographical Routes in Sports Training</a>. Information 16.1 (2025): 30.</p>
