Minor update - December 2025

--- a/publications.html
+++ b/publications.html
@@ -13,6 +13,10 @@
 
 <p>Aleksander Kalacun, Iztok Fister Jr. <a href="static/publications/349.pdf">MARNN: A New Method for Multi-agent Reinforcement Learning</a>. In ERK 2025, Portorož, 601-604, 2025</p>
 
+<p>Iztok Fister, Iztok Fister Jr., Domen Verber, Andres Iglesias, Akemi Galvez, Vili Podgorelec, Damijan Novak. <a href="static/publications/351.pdf">Optimizing Evolutionary Algorithms with a Green Design Framework</a>. In 2025 International Conference on Artificial Intelligence, Computer, Data Sciences and Applications (ACDSA) (pp. 1-7). IEEE. 2025.</p>
+
+<p>Iztok Fister, Iztok Fister Jr., Damijan Novak, Andres Iglesias, Akemi Galvez, Domen Verber. <a href="static/publications/352.pdf">A new interestingness measure for maintaining specific attributes in Numerical Association Rule Mining</a>. In 2025 International Conference on Artificial Intelligence, Computer, Data Sciences and Applications (ACDSA) (pp. 1-6). IEEE. 2025</p>
+
 <p>Iztok Fister Jr., Sancho Salcedo-Sanz, Enrique Alexandre-Cortizo, Damijan Novak, Iztok Fister, Vili Podgorelec, Mario Gorenjak. <a href="static/publications/350.pdf">Toward Explainable Time-Series Numerical Association Rule Mining: A Case Study in Smart-Agriculture</a>. Mathematics, 13(13), 2122, 2025.</p>
 
 <p>Vili Podgorelec, Iztok Fister Jr., Grega Vrbančič. <a href="static/publications/344.pdf">Towards Green AI by Reducing Training Effort of Recurrent Neural Networks Using Hyper-Parameter Optimization with Dynamic Stopping Criteria</a>. In. 22nd Jubilee International Symposium on Intelligent Systems and Informatics (SISY). IEEE, 2024.</p>
