--- a/publications.html
+++ b/publications.html
@@ -5,7 +5,11 @@
 
 <h1>Recent publications</h1>
 
+<p>Iztok Fister Jr., Gerlinde Emsenhuber, Jan Hendrik Plümer, Iztok Fister, Andreas Holzinger. <a href="static/publications/356.pdf">niarules: Advancing interpretable machine learning through numerical association rule mining and 3D coral plot visualization</a>. SoftwareX, 33, 102470, 2026.</p>
+
 <p>Tilen Hliš, Iztok Fister, Iztok Fister Jr. <a href="static/publications/345.pdf">Path Overlap Detection and Property Graph Construction from TCX Data for Advanced Analysis</a>. In. 23rd World Symposium on Applied Machine Intelligence and Informatics (SAMI). IEEE, 2025.</p>
+
+<p>Stefan Schweng, Luca Bernardini, Katharina Keiblinger, Hans-Peter Kaul, Iztok Fister Jr., Niko Lukač, Javier Del ser, Andreas Holzinger. <a href="static/publications/354.pdf">What can artificial intelligence do for soil health in agriculture?</a>. Computer Science Review, 59, 100832, 2025.</p>
 
 <p>Uroš Mlakar, Iztok Fister Jr., Iztok Fister. <a href="static/publications/347.pdf">NiaAutoARM: Automated Framework for Constructing and Evaluating Association Rule Mining Pipelines</a>. Mathematics, 13(12), 1957, 2025.</p>
 
@@ -17,7 +21,11 @@
 
 <p>Iztok Fister, Iztok Fister Jr., Damijan Novak, Andres Iglesias, Akemi Galvez, Domen Verber. <a href="static/publications/352.pdf">A new interestingness measure for maintaining specific attributes in Numerical Association Rule Mining</a>. In 2025 International Conference on Artificial Intelligence, Computer, Data Sciences and Applications (ACDSA) (pp. 1-6). IEEE. 2025</p>
 
+<p>Tilen Hliš, Iztok Fister, Patrik Rek, Iztok Fister Jr. <a href="static/publications/355.pdf">Time-aware analysis of overlapping cycling segments from activity tracker data</a>. In 2025 IEEE 23rd Jubilee International Symposium on Intelligent Systems and Informatics (SISY) (pp. 000201-000206), 2025.</p>
+
 <p>Iztok Fister Jr., Sancho Salcedo-Sanz, Enrique Alexandre-Cortizo, Damijan Novak, Iztok Fister, Vili Podgorelec, Mario Gorenjak. <a href="static/publications/350.pdf">Toward Explainable Time-Series Numerical Association Rule Mining: A Case Study in Smart-Agriculture</a>. Mathematics, 13(13), 2122, 2025.</p>
+
+<p>Uroš Mlakar, Iztok Fister Jr., Iztok Fister. <a href="static/publications/353.pdf">Threshold Adaptation for Improved Wrapper-Based Evolutionary Feature Selection</a>. Biomimetics, 10(10), 670, 2025.</p>
 
 <p>Vili Podgorelec, Iztok Fister Jr., Grega Vrbančič. <a href="static/publications/344.pdf">Towards Green AI by Reducing Training Effort of Recurrent Neural Networks Using Hyper-Parameter Optimization with Dynamic Stopping Criteria</a>. In. 22nd Jubilee International Symposium on Intelligent Systems and Informatics (SISY). IEEE, 2024.</p>
 
